--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,11 @@ Title: Visualise a Piano Keyboard with ggplot2
 Version: 0.0.0.9000
 Authors@R: 
     person("Stefan", "Lanz", , "slanz1137@gmail.com", role = c("aut", "cre"))
-Description: Visualise a piano keyboard with ggplot2
+Description: Visualise a piano keyboard with ggplot2.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Imports: 
+    utils,
+    dplyr
