--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports: 
-    utils,
     dplyr,
     ggplot2,
     rlang,
     cli
+Suggests: 
+    testthat (>= 3.0.0),
+    vdiffr
+Config/testthat/edition: 3
