--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Language: en-GB
 Imports: 
     dplyr,
     ggplot2,
     rlang,
     cli
 Suggests: 
+    spelling,
     testthat (>= 3.0.0),
     vdiffr
 Config/testthat/edition: 3
